# pokemon-tcg-card-search

./: Cargo.toml  LICENSE  README.md  package.json  webpack.config.js
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: check.yml  deploy.yml
src/: api.rs  app.rs  lib.rs  prelude.rs
src/components/: mod.rs  searchbar.rs
src/models/: date_helpers.rs  fetch_state.rs  mod.rs  pokemon_error.rs  search.rs  set.rs
static/: index.html
