[package]
name = "pokemon-tcg-card-search"
version = "0.1.0"
authors = ["Drew Wyatt <drew.j.wyatt@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4"
log = "0.4"
reqwest = "0.10"
strum = "0.20"
strum_macros = "0.20.1"
serde = { version = "1" }
serde_derive = "1"
serde_json = "1"
wasm-bindgen = "0.2.58"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = { version = "0.17", features = ["services"] }
yewtil = { version = "0.3", features = ["future"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Event',
  'FormData',
  'KeyboardEvent',
]
